@@ -4,6 +4,8 @@ Date: ???
   Changes:
     - Updated tech icons to match new vanilla style
     - Added missing tech prerequisites
+    - Changed advanced processing unit to use gold plate instead of silver plate (if chrome isn't enabled)
+    - Handle Angel's circuit wire changes
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
 ---------------------------------------------------------------------------------------------------
